--- a/whymaker-chatbot-interface/package.json
+++ b/whymaker-chatbot-interface/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/discoveryengine": "^2.4.0",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -48,6 +49,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "openai": "^5.12.2",
     "react": "18.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "18.2.0",
