feat: enable file uploads in chatbot interface, allowing users to send documents for context processing; integrate PDF and DOCX parsing capabilities

--- a/whymaker-chatbot-interface/package.json
+++ b/whymaker-chatbot-interface/package.json
@@ -58,6 +58,8 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "remark-gfm": "^4.0.1",
+    "mammoth": "^1.6.0",
+    "pdf-parse": "^1.1.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
