--- a/whymaker-chatbot-interface/package.json
+++ b/whymaker-chatbot-interface/package.json
@@ -60,6 +60,9 @@
     "remark-gfm": "^4.0.1",
     "mammoth": "^1.6.0",
     "pdf-parse": "^1.1.1",
+    "jszip": "^3.10.1",
+    "fast-xml-parser": "^4.4.1",
+    "tesseract.js": "^5.0.5",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
