--- a/whymaker-chatbot-interface/package.json
+++ b/whymaker-chatbot-interface/package.json
@@ -63,6 +63,7 @@
     "jszip": "^3.10.1",
     "fast-xml-parser": "^4.4.1",
     "tesseract.js": "^5.0.5",
+    "@google-cloud/vision": "^4.2.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
